Overflow issues for pages

--- a/src/components/App/Layout.module.scss
+++ b/src/components/App/Layout.module.scss
@@ -14,3 +14,9 @@
   padding: 20px;
   height: 100%;
 }
+
+@media only screen and (max-width: 1023px) {
+  .rhsContent {
+    height: calc(100vh - 57px);
+  }
+}
