--- a/src/components/Chat/index.module.scss
+++ b/src/components/Chat/index.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   position: relative;
-  height: calc(100vh - 154px);
+  height: calc(100% - 57px);
   margin: 0 auto;
   .generateLink {
     height: fit-content;
