--- a/src/components/Chess/index.module.scss
+++ b/src/components/Chess/index.module.scss
@@ -234,7 +234,6 @@
   .wrapper {
     flex-direction: column;
     justify-content: space-between;
-    height: calc(100% - 70px);
     padding-bottom: 70px;
   }
   .box {
